--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,21 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="canonical" href="https://medskill.com.kg">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Скорая помощь Бишкек - Работаем 24/7">
+    <meta property="og:description" content="Приедем в течении 15 минут - Частная-Скорая помощь Бишкек">
+
+
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Приедем в течении 15 минут - Частная-Скорая помощь Бишкек"
     />
+    <meta name="keywords" content="Скорая помощь, Частная скорая помощь, Медицинская помощь, Экстренная помощь, Бишкек, Скорая медицинская помощь, Скорая помощь в Бишкеке, Медицинская помощь на дому, Экстренная медицинская помощь, Скорая помощь 24
+
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Скорая помощь Бишкек - Работаем 24/7</title>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
