--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="canonical" href="https://medskill.com.kg">
+    <link rel="canonical" href="https://medskill.com.kg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow" />
     <meta property="og:title" content="Скорая помощь Бишкек - Работаем 24/7">
-    <meta property="og:description" content="Приедем в течении 15 минут - Частная-Скорая помощь Бишкек">
+    <meta property="og:description" content="Приедем в течении 15 минут - Частная-Скорая помощь Бишкек"/>
     <meta
       name="description"
       content="Приедем в течении 15 минут - Частная-Скорая помощь Бишкек"
     />
-    <meta name="keywords" content="Скорая помощь, Частная скорая помощь, Медицинская помощь, Экстренная помощь, Бишкек, Скорая медицинская помощь, Скорая помощь в Бишкеке, Медицинская помощь на дому, Экстренная медицинская помощь, Скорая помощь 24
+    <meta name="keywords" content="Скорая помощь, Частная скорая помощь, Медицинская помощь, Экстренная помощь, Бишкек, Скорая медицинская помощь, Скорая помощь в Бишкеке, Медицинская помощь на дому, Экстренная медицинская помощь, Скорая помощь 24" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
