--- a/public/index.html
+++ b/public/index.html
@@ -50,5 +50,14 @@
     <script>
       AOS.init();
     </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16763382610"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16763382610');
+</script>
   </body>
 </html>
